--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Event controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.events-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-count: 7;
+  column-width: 100px;
+  border: 5px solid red;
+  padding: 10px 10px 10px 10px;
+}
+
+.event-list-item {
+  border: 5px solid blue;
+  height: 100px;
+  width: 100px;
+}
