--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -4,15 +4,76 @@
 
 .events-list {
   display: flex;
+  justify-content: flex-start;
   flex-wrap: wrap;
-  column-count: 7;
-  column-width: 100px;
-  border: 5px solid red;
-  padding: 10px 10px 10px 10px;
+  margin: 20px;
+  max-width: 1300px;
+  min-width: 1300px;
+  border: 5px solid green;
+  padding: 10px 10px 10px 50px;
 }
 
 .event-list-item {
-  border: 5px solid blue;
-  height: 100px;
-  width: 100px;
+  border: 5px solid black;
+  height: 150px;
+  width: 150px;
+  padding: 10px 10px 10px 10px;
+}
+
+.date-number {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.heading {
+  display: flex;
+  justify-content: center;
+  font-size: 100px;
+}
+
+.calendar {
+  display: flex;
+  justify-content: center;
+}
+
+.user {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.user > div {
+  padding: 5px 5px 5px 5px;
+  font-size: 20px;
+}
+
+.user > div:nth-child(2) {
+  font-weight: bold;
+}
+
+.day-of-the-week {
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+}
+
+.day-of-the-week-names {
+  display: flex;
+  justify-content: center;
+}
+
+.specific-date-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 5px solid black;
+  height: 30px;
+  width: 150px;
+  padding: 10px 10px 10px 10px;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.event-list-item > button {
+  display: flex;
+  justify-content: flex-end;
 }
